# work-os

./: .env.example  .gitignore  Cargo.toml  README.md
.claude/templates/: README.md  follow-ups.template.md  today.template.md  weekly.template.md  work-os-follow-ups.md  work-os-today.md  work-os-weekly.md
.github/workflows/: release.yml
.zed/: debug.json
docs/: README.md  ai-effort-tracking.md  architecture.md  configuration.md  permissions.md  workflow.md
docs/plugins/: building-a-plugin.md  coralogix.md  github.md  google.md  granola.md  jira.md  slack.md
prompts/: README.md  work-os-follow-ups.md  work-os-monthly.md  work-os-today.md  work-os-weekly.md
scripts/: ai-effort.mjs
src/: error.rs  main.rs
src/cli/: auth.rs  config.rs  mod.rs  stats.rs  sync.rs
src/core/: message.rs  mod.rs  plugin.rs  registry.rs  task.rs
src/generators/: compressed_markdown.rs  markdown.rs  mod.rs
src/models/: config.rs  date_range.rs  mod.rs  state.rs  terminal.rs
src/plugins/: mod.rs
src/plugins/coralogix/: client.rs  config.rs  mod.rs  model.rs
src/plugins/github/: ai_stats.rs  client.rs  commit_analyzer.rs  mod.rs  model.rs
src/plugins/google/: auth.rs  mod.rs
src/plugins/google/calendar/: client.rs  mod.rs  model.rs
src/plugins/google/tasks/: client.rs  mod.rs  model.rs
src/plugins/granola/: cache_reader.rs  client.rs  config.rs  mod.rs  model.rs  mom_writer.rs
src/plugins/jira/: client.rs  config.rs  mod.rs  model.rs
src/plugins/slack/: canvas.rs  canvas_writer.rs  client.rs  mod.rs  model.rs
