[package]
name = "work-os"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive", "cargo"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde_json = "1.0"
octocrab = "0.34"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.1"
async-trait = "0.1"
regex = "1.12"
rpassword = "7.3"
